# xk-backend

./: .gitignore  Dockerfile  README.en.md  README.md  docker-compose-staging1.yaml  docker-compose.db.yaml  docker-compose.yaml  docker-compose1.yaml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  settings.yaml
XUEKE/: asgi.py  gunicorn.conf.py  settings.py  storage_backends.py  urls.py  views.py  wsgi.py
algorithm/: iterator.py  sort.py
algorithm/pandas/: series.py
apps/album/: models.py  urls.py  views.py
apps/album/migrations/: 0001_initial.py  0002_initial.py
apps/api/album/: flters.py  (+3 more)
apps/articles/: models.py  renderers.py  run_test.py  serializers.py  views.py
apps/authentication/: forms.py  models.py  urls.py  views.py
apps/core/: backend_views.py  toast.py  utils.py
apps/expense/: choices.py  django_run.py  models.py  query.py  signals.py  urls.py  views.py
apps/memo/: models.py
apps/practice/: admin.py  django_run.py  excel.py  models.py  utils.py  微信支付账单(20220101-20220401).csv
apps/timeline/: models.py
apps/utils/: django_run.py  paginator.py  randoms.py  snowflake.py  uploads.py  utils.py
const/: alipay_bill.csv  timeline.xlsx
mediafiles/album/: down_images.py
nginx/: nginx.conf
scripts/: init_data.py
static/js/: form_validate.js
staticfiles/logo/: getting_started_guide.html
templates/: 404.html  pagination.html  pagination2.html
templates/backend/: base.html  home-list.html  home.html  index.html  login.html
templates/frontend/: base.html  signup.html
tests/: conftest.py
tests/test_expense/: e2e_test.py
(+85 files in other folders)
